# cm-game-auth

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: container.yml
src/: auth.rs  main.rs
